
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef void* u_int32_t ;
typedef int u_int16_t ;
typedef unsigned char u_char ;
typedef int ts ;
struct tcphdr {int th_off; scalar_t__ th_sum; scalar_t__ th_urp; void* th_win; scalar_t__ th_flags; scalar_t__ th_ack; void* th_seq; void* th_dport; void* th_sport; } ;
struct TYPE_6__ {void* s_addr; } ;
struct sockaddr_in {TYPE_3__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct TYPE_5__ {void* s_addr; } ;
struct TYPE_4__ {void* s_addr; } ;
struct ip {int ip_v; int ip_hl; int ip_ttl; scalar_t__ ip_off; void* ip_id; void* ip_len; scalar_t__ ip_tos; int ip_p; TYPE_2__ ip_dst; TYPE_1__ ip_src; } ;
typedef int sin ;
typedef int packet ;


 int AF_INET ;
 int IPPROTO_TCP ;
 unsigned char TCPOPT_NOP ;
 unsigned char TCPOPT_TIMESTAMP ;
 int arc4random () ;
 scalar_t__ checksum (int*,int) ;
 void* htonl (void*) ;
 void* htons (int) ;
 int memcpy (unsigned char*,void**,int) ;
 int memset (unsigned char*,int ,int) ;
 int perror (char*) ;
 int sendto (int,unsigned char*,int,int ,struct sockaddr*,int) ;

__attribute__((used)) static int
send_tcp(int sock, u_int32_t saddr, u_int32_t daddr, u_int16_t sport,
u_int16_t dport, u_int32_t seq, u_int32_t ts)
{
u_char packet[1600];
struct tcphdr *tcp;
struct ip *ip;
unsigned char *opt;
int optlen, len, r;
struct sockaddr_in sin;

memset(packet, 0, sizeof(packet));

opt = packet + sizeof(struct ip) + sizeof(struct tcphdr);
optlen = 0;
opt[optlen++] = TCPOPT_NOP;
opt[optlen++] = TCPOPT_NOP;
opt[optlen++] = TCPOPT_TIMESTAMP;
opt[optlen++] = 10;
ts = htonl(ts);
memcpy(opt + optlen, &ts, sizeof(ts));
optlen += sizeof(ts);
ts = htonl(0);
memcpy(opt + optlen, &ts, sizeof(ts));
optlen += sizeof(ts);

len = sizeof(struct ip) + sizeof(struct tcphdr) + optlen;

ip = (struct ip *)packet;
ip->ip_src.s_addr = saddr;
ip->ip_dst.s_addr = daddr;
ip->ip_p = IPPROTO_TCP;
ip->ip_len = htons(sizeof(struct tcphdr) + optlen);

tcp = (struct tcphdr *)(packet + sizeof(struct ip));
tcp->th_sport = htons(sport);
tcp->th_dport = htons(dport);
tcp->th_seq = htonl(seq);
tcp->th_ack = 0;
tcp->th_off = (sizeof(struct tcphdr) + optlen) / 4;
tcp->th_flags = 0;
tcp->th_win = htons(16384);
tcp->th_sum = 0;
tcp->th_urp = 0;

tcp->th_sum = checksum((u_int16_t *)ip, len);

ip->ip_v = 4;
ip->ip_hl = 5;
ip->ip_tos = 0;
ip->ip_len = htons(len);
ip->ip_id = htons(arc4random() % 65536);
ip->ip_off = 0;
ip->ip_ttl = 64;

sin.sin_family = AF_INET;
sin.sin_addr.s_addr = saddr;

r = sendto(sock, packet, len, 0, (struct sockaddr *)&sin, sizeof(sin));
if (r != len) {
perror("sendto");
return (1);
}

return (0);
}
